; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_tls_wolfssl.c_tls_connection_export_key.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_tls_wolfssl.c_tls_connection_export_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tls_connection = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tls_connection_export_key(i8* %0, %struct.tls_connection* %1, i8* %2, i32* %3, i64 %4, i32* %5, i64 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca %struct.tls_connection*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i64, align 8
  store i8* %0, i8** %9, align 8
  store %struct.tls_connection* %1, %struct.tls_connection** %10, align 8
  store i8* %2, i8** %11, align 8
  store i32* %3, i32** %12, align 8
  store i64 %4, i64* %13, align 8
  store i32* %5, i32** %14, align 8
  store i64 %6, i64* %15, align 8
  %16 = load i32*, i32** %12, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %7
  store i32 -1, i32* %8, align 4
  br label %33

19:                                               ; preds = %7
  %20 = load %struct.tls_connection*, %struct.tls_connection** %10, align 8
  %21 = icmp ne %struct.tls_connection* %20, null
  br i1 %21, label %22, label %31

22:                                               ; preds = %19
  %23 = load %struct.tls_connection*, %struct.tls_connection** %10, align 8
  %24 = getelementptr inbounds %struct.tls_connection, %struct.tls_connection* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32*, i32** %14, align 8
  %27 = load i64, i64* %15, align 8
  %28 = load i8*, i8** %11, align 8
  %29 = call i64 @wolfSSL_make_eap_keys(i32 %25, i32* %26, i64 %27, i8* %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %22, %19
  store i32 -1, i32* %8, align 4
  br label %33

32:                                               ; preds = %22
  store i32 0, i32* %8, align 4
  br label %33

33:                                               ; preds = %32, %31, %18
  %34 = load i32, i32* %8, align 4
  ret i32 %34
}

declare dso_local i64 @wolfSSL_make_eap_keys(i32, i32*, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
